--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,3 +7,10 @@ spotless = "5.14.2"
 gradle-plugin-android = { module = "com.android.tools.build:gradle", version.ref = "android-gradle-plugin" }
 gradle-plugin-spotless = { module = "com.diffplug.spotless:com.diffplug.spotless.gradle.plugin", version.ref = "spotless" }
 gradle-plugin-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+
+[bundles]
+dsl = [
+    "gradle-plugin-android",
+    "gradle-plugin-spotless",
+    "gradle-plugin-kotlin",
+]
