--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 -XX:+UseParallelGC
 org.gradle.parallel=true
 kotlin.code.style=official
 POM_URL=https://github.com/Omico/android-gradle-extensions
