Migrate to build-logic

--- a/age-gradle-plugin/settings/gradle.properties
+++ b/age-gradle-plugin/settings/gradle.properties
@@ -1,4 +1,4 @@
-POM_GROUP_ID=me.omico.age.settings
-POM_ARTIFACT_ID=me.omico.age.settings.gradle.plugin
-POM_NAME=AGE Settings Gradle Plugin
 POM_DESCRIPTION=Gradle plugin for Settings.
+POM_NAME=AGE Settings Gradle Plugin
+PROJECT_ARTIFACT_ID=me.omico.age.settings.gradle.plugin
+PROJECT_GROUP_ID=me.omico.age.settings
