--- a/age-gradle-plugin/spotless/gradle.properties
+++ b/age-gradle-plugin/spotless/gradle.properties
@@ -1,4 +1,4 @@
-POM_GROUP_ID=me.omico.age.spotless
-POM_ARTIFACT_ID=me.omico.age.spotless.gradle.plugin
-POM_NAME=AGE Spotless Gradle Plugin
 POM_DESCRIPTION=Gradle plugin for Spotless.
+POM_NAME=AGE Spotless Gradle Plugin
+PROJECT_ARTIFACT_ID=me.omico.age.spotless.gradle.plugin
+PROJECT_GROUP_ID=me.omico.age.spotless
