--- a/age-dsl/gradle.properties
+++ b/age-dsl/gradle.properties
@@ -1,4 +1,4 @@
-POM_GROUP_ID=me.omico.age
-POM_ARTIFACT_ID=age-dsl
-POM_NAME=AGE DSL
 POM_DESCRIPTION=Common DSL extensions.
+POM_NAME=AGE DSL
+PROJECT_ARTIFACT_ID=age-dsl
+PROJECT_GROUP_ID=me.omico.age
