--- a/age-gradle-plugin/project/gradle.properties
+++ b/age-gradle-plugin/project/gradle.properties
@@ -1,4 +1,4 @@
-POM_GROUP_ID=me.omico.age.project
-POM_ARTIFACT_ID=me.omico.age.project.gradle.plugin
-POM_NAME=AGE Project Gradle Plugin
 POM_DESCRIPTION=Gradle plugin for Project.
+POM_NAME=AGE Project Gradle Plugin
+PROJECT_ARTIFACT_ID=me.omico.age.project.gradle.plugin
+PROJECT_GROUP_ID=me.omico.age.project
