--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,12 @@
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 -XX:+UseParallelGC
-org.gradle.parallel=true
-kotlin.code.style=official
 POM_URL=https://github.com/Omico/age
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
 POM_DEVELOPER_ID=Omico
 POM_DEVELOPER_NAME=Omico
 POM_SCM_CONNECTION=scm:git@github.com:Omico/age.git
-POM_SCM_DEV_CONNECTION=scm:git@github.com:Omico/age.git
+POM_SCM_DEVELOPER_CONNECTION=scm:git@github.com:Omico/age.git
 POM_SCM_URL=https://github.com/Omico/age
+kotlin.code.style=official
+org.gradle.caching=true
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 -XX:+UseParallelGC
+org.gradle.parallel=true
