--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
-android-gradle-plugin = "8.0.0-beta03"
-spotless = "6.15.0"
+android-gradle-plugin = "8.0.0"
+spotless = "6.18.0"
 versions = "0.46.0"
 
 [libraries]
